 Version 1.3.7+svn:
 * campaigns:
   * Northern Rebirth
     * Colored portraits for Sisal and Rakshas
     * Fixed bug in 'Old Friend' where Tallin looses bonus HP, MP and experience gained from the Rod of Justice
   * Son of the Black Eye
     * Fixed bug in 'Saving Inarix' where the blown up bridge wasn't shown
       properly (bug #9817)
   * The South Guard
     * Map for "A Choice In The Fog modified so mermen are actually useful.
     * "Tidings Good And Ill" is now playable even if you didn't recruit
       elves in the previous scenarios (bug #9944).
 * graphics:
   * new graphics for the highwayman
   * no more idle animations for units next to an enemy unit
   * new button and slider in preferences to switch unit idle animations on
     and off and set their frequency
 * language and i18n:
   * updated translations: Bulgarian, Danish, Dutch, Finnish, French, German, 
     Polish, Swedish, Valencian
   * new translation: Serbian (Latin version)
   * added sazanami-gothic font (needed for the Japanese translation)
 * multiplayer:
   * revised maps: Charge, Den of Onis, Meteor Lake, Silverhead Crossing,
     Triple Blitz, Clash
   * 'village_gold' is no longer stored when 'use_map_settings' is used
   * the server sends the game id and not only the game name if a player joins
     a game to avoid ambiguity in case of multiple games with the same name
   * show observer team chat messages in the 'Chat Log' window
 * units:
   * balancing changes:
     * gave the Fugitive the concealment ability (village hiding)
     * increased the XP requirement to advance to the Fugitive from 77 to 120
     * decreased the melee attack of the Fugitive from 12-2 to 11-2
     * decreased the ranged attack of the Fugitive from 8-4 to 7-4
 * user interface:
   * In help, for each ability and special weapon topic, display a list of
     hyperlinks to encountered units having this ability/special (bug #9567)
   * OK in the status menu replaced with more informative "Scroll To".